# compfox-scrap-pipeline

./: Dockerfile  compfox-367313-0c3890a157f2.json  configs.py  h_output.html  imports.py  pdf_links.txt  pipeline_new.py  pipeline_website_api.py  pipeline_without_bg.py  requirements.txt  split.py  upload_gcp.py  utils.py
temp_output/json_files/: Arevalo  Navarro, Jhonny Arturo.json  Bundy,  Tylor.json  Carter,  Tommy.json  Caselin-Huerta,  Eduardo.json  Duran,  Cecilia.json  Garcia Galdames,  Melvin.json  Gist,  Darlene.json  Hernandez,  Lucila.json  House,  Davon.json  Lahey,  Timothy.json  Mora,  Gabriel.json  Nawabi,  Abdul.json  Penrose,  Raymond.json  Rodriguez,  Felisa.json  Shaw,  Lynne.json
tests/: tests.py
v2-pipeline/: dockerfile  pdf_links.txt  pyproject.toml  requirements.txt
v2-pipeline/index/: default__vector_store.json  docstore.json  index_store.json
v2-pipeline/v2_pipeline/: __init__.py  celery_config.py  celery_s.py  llama.py  main.py  process.py  split.py  upload_gcp.py
